--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:theme="@style/Theme.FocTestApp"
         android:allowBackup="true"
+        android:icon="@mipmap/foc_foreground"
+        android:roundIcon="@mipmap/foc_round"
         android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.FocTestApp">
         <activity
             android:name=".MainActivity"
             android:exported="true">
